--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backend_11_08",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/BarbecYou/backend_11_08/issues"
   },
-  "homepage": "https://github.com/BarbecYou/backend_11_08#readme"
+  "homepage": "https://github.com/BarbecYou/backend_11_08#readme",
+  "dependencies": {
+    "commonjs": "^0.0.1"
+  }
 }
